--- a/_posts/2019-12-27-the-us-narrative-today.html
+++ b/_posts/2019-12-27-the-us-narrative-today.html
@@ -144,107 +144,107 @@ stories:
   domain: http://www.dailytimes.com/
   link: https://www.valdostadailytimes.com/sports/national_sports/mitchell-s-big-nd-half-stymies-blazers-rally-in-jazz/image_7a433bcf-461d-528a-bd01-29faf25d7702.html
 images:
-- name: stalin-time-boats-waterfront-bristol.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-boats-waterfront-bristol.jpg
-- name: fence-mexico-atari-asteroids.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-atari-asteroids.jpg
-- name: yosemite-yosemite-green-zuma.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-green-zuma.jpg
-- name: curtain-curtain-rainbow-festival.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-rainbow-festival.jpg
-- name: san-francisco-city-bridge-sf-city-bridge-nazi-poster.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-nazi-poster.jpg
-- name: locked-up-steam-lock-up-steam-dark-soul.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-dark-soul.jpg
-- name: braceros-domingo-ulloa-construction-crane-city.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-construction-crane-city.jpg
-- name: oldhouse-oldhouse-colorful-dream.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-colorful-dream.jpg
-- name: stalin-time-old-train-on-tracks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-old-train-on-tracks.jpg
-- name: la-muse-downtown-125thstreet.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-downtown-125thstreet.jpg
-- name: wind-mills-windmills-aqua.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wind-mills-windmills-aqua.jpg
-- name: ellis-island-ellisisland-yellow-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-yellow-paper.jpg
-- name: udnie-IMG_8486.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/udnie-IMG_8486.jpg
-- name: hollywood-building-hollywood-building-dali-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-dali-two.jpg
-- name: stalin-time-palace-water-fountain.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-palace-water-fountain.jpg
-- name: copper-circuit-castle-window_35928999923_o.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-castle-window_35928999923_o.jpg
-- name: mistywoods-babyfoot-purp-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-purp-paper.jpg
-- name: meadowbutterfly-meadow-butterfly-sand-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-sand-paper.jpg
-- name: copper-circuit-old-church-in-field.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-old-church-in-field.jpg
-- name: old-cabin-oldcabin-sunday.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-sunday.jpg
-- name: nazi-invasion-firetruck-bright-sun.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-firetruck-bright-sun.jpg
-- name: fence-mexico-oily-mcoilface.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-oily-mcoilface.jpg
-- name: white-house-lawn-white-house-lawn-alberto-giacometti.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-alberto-giacometti.jpg
-- name: san-francisco-street-view-san-francisco-street-view-dali-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-dali-two.jpg
-- name: nazi-invasion-berline-wall-old-building.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-berline-wall-old-building.jpg
-- name: aws-s3-stories-containership-copper-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-containership-copper-circuit.jpg
-- name: castle-on-hill-castle-on-hill-edinburgh-propaganda-leaflets.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-propaganda-leaflets.JPG
-- name: meadowbutterfly-meadow-butterfly-gred-mash.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-gred-mash.jpg
-- name: lincoln-memorial-lincolnmemorial-rainbow-festival.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-rainbow-festival.jpg
-- name: nazi-invasion-seattle-public-market_36725946605_o.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-seattle-public-market_36725946605_o.jpg
-- name: fence-bw-fist-dark-dali.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-bw-fist-dark-dali.png
-- name: status-berlin-status-berlin-light-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-light-dali.jpg
-- name: braceros-domingo-ulloa-city-building-trees-sky.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-city-building-trees-sky.jpg
-- name: machine-road-machine-road-plentiful.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-plentiful.jpg
-- name: locked-up-steam-lock-up-steam-alberto-giacometti.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-alberto-giacometti.jpg
-- name: bf-skinner-white-house-lawn-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-white-house-lawn-view.jpg
-- name: white-house-lawn-white-house-lawn-nazi-poster.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-nazi-poster.jpg
-- name: stalin-time-statue-of-liberty-back.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-statue-of-liberty-back.jpg
-- name: aws-s3-kerbypeak-kerbypeak-still-1200.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-kerbypeak-kerbypeak-still-1200.jpg
-- name: bf-skinner-pigeons-do-not-feed-them.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-pigeons-do-not-feed-them.jpg
-- name: curtain-curtain-dry-skin.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-dry-skin.jpg
-- name: store-on-corner-store-constitution.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-constitution.jpg
-- name: fast-lights-freeway-redes-fast-flux-623x425-light-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-light-dali.jpg
-- name: nazi-invasion-times-square-up-road.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-times-square-up-road.jpg
-- name: christianity-christianity-under-construction-dry-skin.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-dry-skin.jpg
-- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-blue-circuit-3.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-blue-circuit-3.jpg
-- name: cargo-ship-cargo-ship-on-sea-jap-dys-1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-jap-dys-1.jpg
-- name: oldroad-old-road-satan-red.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-satan-red.jpg
-- name: berlinwall-DSC-0084-wols.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-wols.jpg
-- name: abandonedbuildings_blue_brush.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_blue_brush.jpg
-- name: server-cloud-server-racks-door-yellow-collage.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-yellow-collage.jpg
+- name: san-francisco-city-bridge-sf-city-bridge-internet-numbers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-internet-numbers.jpg
+- name: nazi-invasion-eagle-spread-tree-2.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-eagle-spread-tree-2.jpg
+- name: aws-s3-stories-fredericksburg-downtown-flag.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-fredericksburg-downtown-flag.jpg
+- name: amusement-park-amusement-park-2-wols.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-wols.jpg
+- name: bf-skinner-bletchley-computer-racks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-bletchley-computer-racks.jpg
+- name: downtown-trucksilo-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-dali-three.jpg
+- name: udnie-IMG_E3643.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/udnie-IMG_E3643.jpg
+- name: death-valley-death-valley-national-park-alien-goggles.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-alien-goggles.jpg
+- name: redondo-beach-harbor-redondo-beach-harbor-bright-sand.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/redondo-beach-harbor-redondo-beach-harbor-bright-sand.jpg
+- name: old-barn-old-barn-1500-constitution.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-constitution.jpg
+- name: castle-on-hill-castle-on-hill-edinburgh-alien-goggles.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-alien-goggles.JPG
+- name: oldbarn-oldbarn-wols.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-wols.jpg
+- name: gypsymosaic-gypsy-eyes-pablo-blue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-pablo-blue.jpg
+- name: berlinwall-DSC-0084-alien-goggles.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-alien-goggles.jpg
+- name: berlinwall-DSC-0084-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-matrix.jpg
+- name: windowmountain-window-mountain-bright-sand.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-bright-sand.jpg
+- name: fence-mexico-kand-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-kand-two.jpg
+- name: copper-circuit-dark-tower-of-london.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-dark-tower-of-london.jpg
+- name: statue-of-liberty-front-view-statueofliberty-dali-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-dali-two.jpg
+- name: yuma-bank-yuma-bak-crafty-painting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yuma-bank-yuma-bak-crafty-painting.jpg
+- name: beach-rocks-beach-rocks-currents-hot-spicy.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-hot-spicy.jpg
+- name: stories-gypsy-eyes-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-gypsy-eyes-blue-circuit.jpg
+- name: supreme-court-supremecourt-dark-soul.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-dark-soul.jpg
+- name: stalin-time-google-front-of-business.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-google-front-of-business.jpg
+- name: flower-barbed-wire-flower-barbed-wire-crafty-painting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-crafty-painting.jpg
+- name: statue-of-liberty-front-view-statueofliberty-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-light-dali.jpg
+- name: crow_bright_sand.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_bright_sand.jpg
+- name: capital-battle-capitolbattle-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-clean-view.jpg
+- name: stalin-time-downtown-125thstreet.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-downtown-125thstreet.jpg
+- name: old-house-oldhouse-ww2-dresden.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-ww2-dresden.jpg
+- name: 35562068104_fa20c57575-copper-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/35562068104_fa20c57575-copper-circuit.jpg
+- name: christianity-christianity-under-construction-ww2-dresden.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-ww2-dresden.jpg
+- name: downtown-trucksilo-rainbow-festival.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-rainbow-festival.jpg
+- name: nazi-invasion-old-broken-piano-street.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-old-broken-piano-street.jpg
+- name: berlinwall-DSC-0084-spagetti-accident.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-spagetti-accident.jpg
+- name: mosaic-face-mosaic-face-gred-mash.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-gred-mash.jpg
+- name: fast-lights-freeway-redes-fast-flux-623x425-china-prop.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-china-prop.jpg
+- name: powerlines-power-crafty-painting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-crafty-painting.jpg
+- name: braceros-domingo-ulloa-old-time-cash-register.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-old-time-cash-register.jpg
+- name: crow-crow-purple-pond.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-purple-pond.jpg
+- name: aws-s3-stories-facing-cannon-copper-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-facing-cannon-copper-circuit.jpg
+- name: trucksilo-trucksilo-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-aqua.jpg
+- name: server-cloud-server-racks-clouds-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-dark-dali.jpg
+- name: stalin-time-oxoford-circus-station.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-oxoford-circus-station.jpg
+- name: walled-garden-walled-garden-really-hot.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-really-hot.jpg
+- name: store-on-corner-store-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-atari-missle.jpg
+- name: window-window-emily-carr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-emily-carr.jpg
+- name: braceros-domingo-ulloa-new-york-city-skyline_36655833162_o.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-new-york-city-skyline_36655833162_o.jpg
+- name: razorwire-DSC-0080-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-clean-view.jpg
+- name: oldsmallboat-oldsmallboat-dark-rain.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-dark-rain.jpg
+- name: bf-skinner-miami-beach-tower-city.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-miami-beach-tower-city.jpg
 ---
 Three Vehicle Accident East Of Lexington Results In Fatality.&nbsp;Walking Across America For Veteran Awareness.&nbsp;Indians Lose To Dogs.&nbsp;New Film Explores The Life Of Linda Ronstadt.&nbsp;Christmas For The Fishes.&nbsp;Oak Mitsui Selling Camden Facility To Nippon Denkai.&nbsp;Slave Cemetery Poses Questions For Florida Country Club.&nbsp;Police Release Teen Suspect In Barnard Students Killing.&nbsp;
